--- a/main.yaml
+++ b/main.yaml
@@ -403,7 +403,7 @@
         echo "{{ app_run_output.stderr }}" >> "{{ log_stderr_path }}"
       when: app_run_output.stderr is defined and app_run_output.stderr != ""
 
-    # Add the Nginx official repository key
+    # Ensure Nginx is installed
     - name: Add the Nginx official repository key
       ansible.builtin.apt_key:
         url: http://nginx.org/keys/nginx_signing.key
@@ -431,13 +431,14 @@
         echo "{{ install_nginx_output.stdout }}" >> "{{ log_stdout_path }}"
       when: install_nginx_output.stdout is defined and install_nginx_output.stdout != ""
 
+
     # Append install Nginx stderr to log file
     - name: Append install Nginx stderr to log
       shell: |
         echo "{{ install_nginx_output.stderr }}" >> "{{ log_stderr_path }}"
       when: install_nginx_output.stderr is defined and install_nginx_output.stderr != ""
 
-    # Remove default Nginx site configuration
+    # Ensure Nginx service is running and enabled
     - name: Remove default Nginx site configuration
       file:
         path: /etc/nginx/conf.d/default.conf
@@ -445,7 +446,7 @@
       notify:
         - restart nginx
 
-    # Copy custom Nginx configuration from template
+    # Create custom Nginx configuration
     - name: Copy custom Nginx configuration
       template:
         src: nginx.conf.j2
@@ -453,10 +454,16 @@
       notify:
         - restart nginx
 
-  # Handlers to restart Nginx service
+  # Handlers to restart services
   handlers:
     - name: restart nginx
       service:
         name: nginx
         state: restarted
+
+
+        ##############PLAYBOOK END####################
+
+
+
 
